Update filebot.sh from upstream debian package